contact and footer added

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Montserrat:wght@400;500&family=Poppins:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Montserrat:wght@400;500&family=Norican&family=Poppins:wght@400;500&display=swap");
 
 $primary-color: #0e153a;
 $secondary-color: #3d5af1;
@@ -31,3 +31,4 @@ html {
 // font-family: 'Caveat', cursive;
 // font-family: 'Montserrat', sans-serif;
 // font-family: 'Poppins', sans-serif;
+// font-family: 'Norican', cursive;
