code spliting added, image zoom added

--- a/src/components/Certificate/_style.scss
+++ b/src/components/Certificate/_style.scss
@@ -20,6 +20,11 @@
     img {
       width: 100%;
       border: 1px solid $secondary-color;
+      transition: all 0.2s;
+
+      &:hover {
+        transform: scale(1.1);
+      }
     }
   }
 }
