blog page added, contact form now works!

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -4,3 +4,8 @@ $primary-color: #0e153a;
 $secondary-color: #3d5af1;
 $nav-height: 60px;
 $max-width: 1200px;
+
+// font-family: 'Caveat', cursive;
+// font-family: 'Montserrat', sans-serif;
+// font-family: 'Poppins', sans-serif;
+// font-family: 'Norican', cursive;
