new techtool added, contact page redesigned

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Montserrat:wght@400;500&family=Norican&family=Poppins:wght@400;500&display=swap");
 
-$primary-color: #0e153a;
-$secondary-color: #3d5af1;
+$primary-color: #010349;
+$secondary-color: #0b68de;
 $nav-height: 60px;
 $max-width: 1200px;
 
