--- a/src/components/Contact/_style.scss
+++ b/src/components/Contact/_style.scss
@@ -1,19 +1,92 @@
 @import "../../base";
 
 .contact_section {
-  background: $primary-color;
-  color: white;
-  padding: 100px 0px;
+  padding-top: 100px;
 
   .contact_wrap {
     max-width: $max-width;
     margin: 0 auto;
-    padding: 0 15px;
-    flex-wrap: wrap;
+    border-radius: 8px;
+    background-color: $primary-color;
+    color: white;
+    padding: 2rem 4rem;
     display: flex;
     justify-content: center;
-    gap: 5rem;
-    align-items: center;
+    gap: 1.5rem;
+
+    @media (max-width: 1000px) {
+      flex-wrap: wrap;
+      padding: 2rem 1.5rem;
+    }
+
+    .contact_info_details {
+      display: flex;
+      flex-direction: column;
+
+      .contact_head {
+        font-family: "Montserrat", sans-serif;
+        font-size: 2rem;
+        font-weight: 600;
+      }
+
+      .contact_sub {
+        font-family: "Montserrat", sans-serif;
+        font-size: 1rem;
+        font-weight: 500;
+        margin-top: 0.5rem;
+        color: #f5f5f5b2;
+        max-width: 500px;
+        line-height: 1.5rem;
+        margin-top: 1.2rem;
+      }
+
+      .extra_details {
+        margin-top: auto;
+
+        @media (max-width: 1000px) {
+          margin: 2.5rem 0;
+        }
+
+        h5 {
+          font-size: 0.9rem;
+          font-family: "Montserrat";
+          font-weight: 400;
+          color: #ffffffc4;
+          margin-bottom: 1.5rem;
+          display: flex;
+          align-items: center;
+
+          span {
+            color: $secondary-color;
+            margin-right: 1rem;
+            font-size: 1.2rem;
+            display: inline-flex;
+          }
+        }
+      }
+
+      .social_links {
+        margin-top: auto;
+        display: flex;
+
+        a {
+          font-size: 1.1rem;
+          margin-right: 1rem;
+          transition: all 0.2s;
+          width: 45px;
+          height: 45px;
+          border-radius: 50px;
+          display: grid;
+          place-items: center;
+          cursor: pointer;
+          color: white;
+
+          &:hover {
+            background-color: $secondary-color;
+          }
+        }
+      }
+    }
 
     .form_confirmation {
       display: flex;
@@ -31,49 +104,67 @@
 
     .contact_form_wrap {
       font-family: "Montserrat", sans-serif;
-      max-width: 600px;
+      max-width: 500px;
       width: 100%;
-
-      .contact_head {
-        font-family: "Montserrat", sans-serif;
-        font-size: 22px;
-        font-weight: 500;
-      }
-
-      .contact_sub {
-        margin-top: 0.5rem;
-        color: #cbcbcb;
-        max-width: 500px;
-        line-height: 1.5rem;
-      }
+      background-color: white;
+      border-radius: 8px;
+      padding: 2rem;
 
       form {
-        display: flex;
-        flex-direction: column;
-        margin-top: 2rem;
+        width: 100%;
+
+        label {
+          color: black;
+          font-family: "Montserrat", sans-serif;
+          font-weight: 500;
+          margin-bottom: 0.5rem;
+          display: block;
+          font-size: 0.9rem;
+        }
+
+        .input_wrap {
+          position: relative;
+          margin-bottom: 2rem;
+
+          .inputIcon {
+            color: black;
+            font-size: 1.5rem;
+            position: absolute;
+            display: flex;
+            top: 50%;
+            transition: all 0.3s;
+            transform: translate(50%, -50%);
+          }
+        }
 
         input,
         textarea {
-          margin-bottom: 2rem;
           background: none;
           outline: none;
+          border-radius: 5px;
           font-weight: 500;
           font-family: "Montserrat", sans-serif;
-          color: #cbcbcb;
-          border: none;
-          padding: 10px 15px;
-          border-bottom: 1px solid #cbcbcb;
+          padding: 12px 15px 12px 50px;
+          border: 2px solid #cbcbcb;
           transition: all 0.3s;
-          font-size: 1rem;
+          font-size: 0.9rem;
+          width: 100%;
 
           &:focus {
-            border-bottom-color: $secondary-color;
+            border-color: $secondary-color;
           }
+        }
+
+        #Message {
+          background-color: #f5f5f7;
+          border: none;
+          padding-left: 15px;
         }
 
         button {
           width: max-content;
-          padding: 8px 20px;
+          padding: 12px 40px;
+          margin-left: auto;
           background: $secondary-color;
           font-size: 1rem;
           color: white;
@@ -111,34 +202,6 @@
             }
           }
         }
-      }
-    }
-
-    .details_box {
-      background: #1b2767;
-      padding: 20px;
-      font-weight: 500;
-      font-family: "Montserrat", sans-serif;
-      text-align: center;
-      flex: 1;
-      max-width: 600px;
-      border-radius: 3px;
-
-      h3 {
-        font-weight: 500;
-        font-size: 1rem;
-        margin-bottom: 0.5rem;
-      }
-
-      h5 {
-        font-weight: 400;
-        color: #667fff;
-        margin-bottom: 1.5rem;
-        letter-spacing: 0.5px;
-      }
-
-      h5:last-child {
-        margin-bottom: 0;
       }
     }
   }
