code duplication fixed

--- a/src/components/Project/_style.scss
+++ b/src/components/Project/_style.scss
@@ -1,6 +1,5 @@
-@import "../Techtool/style";
 @import "../../base";
-@import "../Hero/style";
+@import "../../mixins";
 
 .projects_container {
   max-width: $max-width;
