--- a/src/components/Hero/_style.scss
+++ b/src/components/Hero/_style.scss
@@ -1,4 +1,5 @@
 @import "../../base";
+@import "../../mixins";
 
 @keyframes bounce {
   0%,
@@ -22,22 +23,6 @@
     -ms-transform: translateY(-15px);
     -webkit-transform: translateY(-15px);
     transform: translateY(-15px);
-  }
-}
-
-@mixin ButtonStyle() {
-  text-decoration: none;
-  color: white;
-  background: $secondary_color;
-  padding: 10px 55px;
-  font-size: 1.1rem;
-  margin-top: 1.5rem;
-  transition: all 0.2s;
-  cursor: pointer;
-  border: none;
-
-  &:hover {
-    background-color: #3d5af1d1;
   }
 }
 
