--- a/src/components/Project/_style.scss
+++ b/src/components/Project/_style.scss
@@ -34,6 +34,8 @@
   }
 
   .project_details {
+    flex: 1;
+
     .project_desc {
       margin-top: 0.5rem;
       line-height: 1.3rem;
@@ -80,11 +82,22 @@
 
   .project_img {
     max-width: 450px;
+    width: 100%;
+    height: 220px;
+    border: 2px solid #3d5af1;
+
+    @media (max-width: 600px) {
+      height: auto;
+      border: none;
+
+      & > img {
+        border: 2px solid #3d5af1;
+      }
+    }
 
     img {
       width: 100%;
       height: 100%;
-      border: 2px solid #3d5af1;
     }
   }
 }
